@@ -1,3 +1,7 @@
+2014-04-24  Dimitris Papavasiliou  <dpapavas@gmail.com>
+
+	* c.opt (Wshadow-ivar, flocal-ivars, fivar-visibility): Add.
+
 2014-04-23  Marek Polacek  <polacek@redhat.com>
 
 	* c-common.c (handle_tm_wrap_attribute): Tweak error message.
